--- a/server/.env
+++ b/server/.env
@@ -4,7 +4,7 @@ NODE_ENV=development
 
 # MongoDB Configuration
 
-MONGO_URI=mongodb+srv://kinghasantafesh:GFMnGVMGNssrueUk@cluster0.wqwelma.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://<username>:<password>@cluster0.wqwelma.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # JWT Configuration
 JWT_SECRET=abcd1234
 
